# codeCTRL

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  bacon.toml  bootstrap-build.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/containers/: build-all.sh
.github/containers/debian-10/: Dockerfile
.github/containers/debian-latest/: Dockerfile
.github/containers/debian-sid/: Dockerfile  bootstrap-action.sh
.github/containers/fedora-latest/: Dockerfile  bootstrap-action.sh
.github/containers/fedora-rawhide/: Dockerfile  bootstrap-action.sh
.github/containers/rhel-7/: Dockerfile
.github/containers/rhel-8/: Dockerfile
.github/containers/rhel-latest/: Dockerfile  bootstrap-action.sh
.github/containers/ubuntu-20-04/: Dockerfile
.github/containers/ubuntu-latest/: Dockerfile
.github/workflows/: build-and-package.yml  update-containers.yml  update-server-container.yml
crates/codectrl-gui/: Cargo.toml
crates/codectrl-gui/src/: lib.rs
crates/codectrl-gui/src/views/: main_view.rs
crates/codectrl-gui/src/views/main_view/: log_item.rs
crates/codectrl-server/: Cargo.toml
crates/codectrl-server/src/: lib.rs
crates/core/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  view.rs
crates/gui/src/styles/: menu.rs
crates/gui/src/theme/: engine.rs  mod.rs  palette.rs  theme.rs
crates/gui/src/theming/: engine.rs  palette.rs  theme.rs
crates/gui/src/views/: main_view.rs  search_view.rs
crates/gui/src/views/main_view/: log_details_view.rs  log_item.rs
crates/logger/: Cargo.toml  README.md
crates/logger/src/: lib.rs  tests.rs
crates/protobuf-bindings/: Cargo.toml  README.md  relink
crates/protobuf-bindings/native/: Cargo.toml  build.rs
crates/protobuf-bindings/native/src/: lib.rs
crates/protobuf-bindings/src/: lib.rs
crates/protobuf-bindings/web/: Cargo.toml  build.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  redirect_handler.rs
crates/server/src/entity/: connection.rs
crates/server/tests/: redirect_handler_test.rs
wix/: main.wxs
