[package]
name = "codectrl"
version = "0.99.3"
edition = "2021"
authors = [
  "Samuel Boyden <sam@sboyden.com>",
]
license = "MIT"
description = "A dynamic source code analysis tool, made by Samuel Boyden."

[workspace]
members = [
  "crates/gui",
  "crates/server",
  "crates/protobuf-bindings",
  "crates/logger"
]

[workspace.package]
version = "0.99.3"
edition = "2021"
authors = [
  "Samuel Boyden <sam@sboyden.com>",
]
description = "A dynamic source code analysis tool, made by Samuel Boyden."
license = "MIT"
rust-version = "1.70.0"
readme = "README.md"
homepage = "https://github.com/STBoyden/codectrl"
repository = "https://github.com/STBoyden/codectrl"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
codectrl-protobuf-bindings = { path = "crates/protobuf-bindings"}
parking_lot = "0.12.1"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
tonic = "0.7"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }

[[bin]]
path = "crates/core/main.rs"
name = "codectrl"

[dependencies]
codectrl-gui = { path = "crates/gui" }
codectrl-server = { path = "crates/server" }

[profile.dev.package."*"]
opt-level = 3

[package.metadata.deb]
name = "codectrl"
maintainer = "Samuel Boyden <sam@stboyden.com>"
copyright = "2023, Samuel Boyden <sam@stboyden.com>"
license-file = ["LICENSE", "4"]
assets = [
  [
    "target/release/codectrl",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/codectrl/README",
    "644",
  ],
]
depends = "libgtk-3-0"

[[package.metadata.generate-rpm.assets]]
source = "target/release/codectrl"
dest = "/usr/bin/codectrl"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/codectrl/README"
mode = "644"
doc = true

[package.metadata.wix]
name = "CodeCTRL"
product-name = "CodeCTRL"
version = "1.0.3"
