[package]
name = "codectrl-gui"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.5"
chrono = { workspace = true }
codectrl-protobuf-bindings = { workspace = true }
codectrl-server = { path = "../server" }
dark-light = "1.0.0"
dashmap = { workspace = true }
directories = { workspace = true }
iced = { version = "0.10", features = ["tokio", "system"] }
iced_aw = { version = "0.6" }
iced_native = "0.10.3"
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true}
tokio-stream = { version = "0.1.14", features = ["full"] }
tonic = { workspace = true }
