[package]
name = "codectrl-protobuf-bindings"
description = "Generate Rust protobuf bindings for use with CodeCTRL and the Rust logger"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(target_arch = "wasm32")'.dependencies]
web = { path = "./web", package = "codectrl-bindings-web" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native = { path = "./native", package = "codectrl-bindings-native" }
