[package]
name = "codectrl-server"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
codectrl-protobuf-bindings = { workspace = true }
dashmap = { workspace = true }
directories = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-core = "0.3"
futures-util = "0.3"
jsonwebtoken = { version = "8.3.0", default-features = false }
log = "0.4.19"
oauth2 = "4.4.1"
once_cell = "1.18.0"
parking_lot = { workspace = true }
prost = "0.11"
rand = "0.8.5"
regex = "1.8.4"
sea-orm = { version = "0.11", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-web = "0.3"
uuid = { workspace = true }
warp = "0.3.5"

[[bin]]
path = "bin/standalone.rs"
name = "standalone"
